Create Roles and assign Permissions updates

--- a/docs/organizations/create-roles-permissions.mdx
+++ b/docs/organizations/create-roles-permissions.mdx
@@ -1,11 +1,11 @@
 ---
-title: Create Roles and assign Permissions with Clerk
-description: Use the Clerk Dashboad to create and assign Roles and Permissions to users in your Organization.
+title: Create Roles and assign Permissions
+description: Use the Clerk Dashboard to create and assign Roles and Permissions to users in your Organization.
 ---
 
-# Create Roles and assign Permissions with Clerk
+# Create Roles and assign Permissions
 
-In the Clerk Dashboard, you can create Roles, assign Permissions to them, and change users' Roles.
+In the Clerk Dashboard, you can create Roles, assign Permissions to them, and change user's Roles.
 
 ## Create a new Role for your Organization
 
@@ -27,5 +27,3 @@ In the Clerk Dashboard, you can create Roles, assign Permissions to them, and ch
 2. Select the **Members** tab. 
 3. In the list of members, find the one whose Role you want to change.
 4. Select another Role from their Role dropdown.
-
-Administrators can also change a user's organization during impersonation using the [organization profile](/docs/components/organization/organization-profile).https://dashboard.clerk.com/apps/app_2Ys3AaGJ3KvvXvnzCJuC1KbgSaf/instances/ins_2Ys3AhUipLEU27KdaQWsEeiUcjD
