--- a/docs/organizations/verify-user-permissions.mdx
+++ b/docs/organizations/verify-user-permissions.mdx
@@ -1,22 +1,22 @@
 ---
-title: Restrict access with Permissions
+title: Verify the active user’s permissions
 description: A collection of utility functions and components in order to allow developers to perform authorization checks.
 ---
 
-# Restrict access with Permissions
+# Verify the active user’s permissions
 
 Clerk provides two kinds of helpers for authorization:
 
-- **`protect` helpers** are opinionated and will not process unauthorized users, either by not rendering children or by throwing errors. [`<Protect />` component](/docs/components/protect) and the experimental `auth().protect` fall into this category.
-- **`has` helpers** are more composable and flexible. They let you check to see what Permissions a user *has*. You can decide what to do if the user lacks the required Permissions.
+- **`protect` helpers** are opinionated and will block additional processing for unauthorized users, either by not rendering children or by throwing errors. [`<Protect />` component](/docs/components/protect) and the experimental `auth().protect` fall into this category.
+- **`has` helpers** are more composable and flexible. They let you check to see what Permissions a user *has*. You can decide what to do if the user lacks the Permission.
 
 ## Authorization in Client Components
 
-The examples bellow work for both SSR and CSR. Examples are written for Nextjs App Router but they are supported any React meta framework (f.e. Remix, Gatsby).
+The examples below work for both SSR and CSR. Examples are written for Next.js App Router but they are supported any React meta framework (e.g. Remix, Gatsby).
 
-<Tabs type="framework" items={["Nextjs with Protect", "Nexjts with useAuth().has"]}>
+<Tabs type="framework" items={["Next.js with Protect", "Next.js with useAuth().has"]}>
   <Tab>
-  The following snippet uses Clerk's `<Protect />` component to only render the form for users with the `org:team_settings:manage` Permissions.
+  The following snippet uses Clerk's `<Protect />` component to only render the form for users with the `org:team_settings:manage` Permission.
 
 ```tsx filename="/app/dashboard/settings/form.tsx"
 'use client';
@@ -104,7 +104,7 @@ export default function SettingsLayout(props: PropsWithChildren){
 
   <Tab>
     <Callout>
-      `auth().protect()` will throw a `notFound` Nextjs error if authorization checks fail
+      `auth().protect()` will throw a `notFound` Next.js error if authorization checks fail
     </Callout>
 
     ```tsx filename="/app/dashboard/settings/layout.tsx"
@@ -125,7 +125,7 @@ export default function SettingsLayout(props: PropsWithChildren){
 
 ## Authorization in endpoints
 
-<Tabs type="framework" items={["Nextjs Server Actions", "Nexjts Route Handlers", "Nextjs API Routes"]}>
+<Tabs type="framework" items={["Next.js Server Actions", "Nexjts Route Handlers", "Next.js API Routes"]}>
   <Tab>
     ```tsx
     import { auth } from "@clerk/nextjs/server";
@@ -148,7 +148,7 @@ export default function SettingsLayout(props: PropsWithChildren){
   <Tab>
     <Callout>
 
-      `auth().protect()` will throw a `notFound` Nextjs error if authorization checks fail
+      `auth().protect()` will throw a `notFound` Next.js error if authorization checks fail
 
     </Callout>
 
