--- a/docs/organizations/create-roles-permissions.mdx
+++ b/docs/organizations/create-roles-permissions.mdx
@@ -5,7 +5,7 @@ description: Use the Clerk Dashboard to create and assign Roles and Permissions 
 
 # Create Roles and assign Permissions
 
-In the Clerk Dashboard, you can create Roles, assign Permissions to them, and change user's Roles.
+In the Clerk Dashboard, you can create Roles, assign Permissions to them, and change users' Roles.
 
 ## Create a new Role for your Organization
 
