call our the recommended approach is Permissions auth

--- a/docs/organizations/verify-user-permissions.mdx
+++ b/docs/organizations/verify-user-permissions.mdx
@@ -10,6 +10,8 @@ Clerk provides two kinds of helpers for authorization:
 - **`protect` helpers** are opinionated and will block additional processing for unauthorized users, either by not rendering children or by throwing errors. [`<Protect />` component](/docs/components/protect) and the experimental `auth().protect` fall into this category.
 - **`has` helpers** are more composable and flexible. They let you check to see what Permissions a user *has*. You can decide what to do if the user lacks the Permission.
 
+Both kinds of helpers can check a user's Role and Permissions. The recommended approach is to verify a user's Permissions. Roles can be added and removed and their Permissions changed. Authorizing by Permissions is more explicit.
+
 ## Authorization in Client Components
 
 The examples below work for both SSR and CSR. Examples are written for Next.js App Router but they are supported any React meta framework (e.g. Remix, Gatsby).
