reordering examples and tweaking code

--- a/docs/organizations/verify-user-permissions.mdx
+++ b/docs/organizations/verify-user-permissions.mdx
@@ -7,18 +7,28 @@ description: A collection of utility functions and components in order to allow 
 
 Clerk provides two kinds of helpers for authorization:
 
-- **`protect` helpers** are opinionated and will block additional processing for unauthorized users, either by not rendering children or by throwing errors. [`<Protect />` component](/docs/components/protect) and the experimental `auth().protect` fall into this category.
+- **`protect` helpers** are opinionated and will block additional processing for unauthorized users, either by not rendering children or by throwing errors. [`<Protect>` component](/docs/components/protect) and the experimental `auth().protect()` fall into this category.
 - **`has` helpers** are more composable and flexible. They let you check to see what Permissions a user *has*. You can decide what to do if the user lacks the Permission.
 
-Both kinds of helpers can check a user's Role and Permissions. The recommended approach is to verify a user's Permissions. Roles can be added and removed and their Permissions changed. Authorizing by Permissions is more explicit.
+Both kinds of helpers can check a user's Role and Permissions. The recommended approach is to verify a user's Permissions. Roles can be added and removed and their Permissions changed. Authorizing by Permissions is explicit.
+
+### `has()`
+
+Clerk's `has()` function can be used on both the frontend and the backend to determine if the user “has” a Role or Permission.
+
+`has()` can be used anywhere that Clerk returns an [Authentication object](/docs/references/nextjs/authentication-object):
+
+- [`auth()`](/docs/references/nextjs/auth) in Next.js App Router
+- [`useAuth()`](/docs/references/react/use-auth) in client components, including during SSR
+- [`getAuth(request)`](/docs/references/nextjs/get-auth) in server contexts outside of the App Router and SSR (Remix Loaders, Node, Express, Fastify, etc)
 
 ## Authorization in Client Components
 
 The examples below work for both SSR and CSR. Examples are written for Next.js App Router but they are supported any React meta framework (e.g. Remix, Gatsby).
 
-<Tabs type="framework" items={["Next.js with Protect", "Next.js with useAuth().has"]}>
+<Tabs type="framework" items={["Next.js with <Protect>", "Next.js with useAuth().has()"]}>
   <Tab>
-  The following snippet uses Clerk's `<Protect />` component to only render the form for users with the `org:team_settings:manage` Permission.
+  The following snippet uses Clerk's `<Protect>` component to only render the form for users with the `org:team_settings:manage` Permission.
 
 ```tsx filename="/app/dashboard/settings/form.tsx"
 'use client';
@@ -40,7 +50,7 @@ export function SettingsForm(){
   </Tab>
 
   <Tab>
-    The [`useAuth()`](/docs/references/react/use-auth) hook can help you access what permissions a user has using `has`. In the below snippet, `has({ permission: "org:team_settings:manage" })` returns `false` if the user does not have the `org:team_settings:manage` Permission.
+    The `useAuth()` hook can help you access what permissions a user has using `has()`. In the below snippet, `has({ permission: "org:team_settings:manage" })` returns `false` if the user does not have the `org:team_settings:manage` Permission.
 
 ```tsx filename="/app/dashboard/settings/form.tsx"
 'use client';
@@ -64,27 +74,9 @@ export function SettingsForm(){
 
 ## Authorization in React Server Components
 
-<Tabs type="framework" items={["RSC with Protect", "RSC with auth().has", "RSC with auth().protect"]}>
+<Tabs type="framework" items={[ "RSC with has()", "RSC with auth().protect()", "RSC with <Protect>"]}>
   <Tab>
-    The following snippet uses `<Protect />`'s `condition` prop to conditionally render its children if the user has either `org:team_settings:manage` or `org:team_settings:read` Permissions.
-```tsx filename="/app/dashboard/settings/layout.tsx"
-import type { PropsWithChildren } from "react";
-import { Protect } from "@clerk/nextjs";
-
-export default function SettingsLayout(props: PropsWithChildren){
-  return (
-    <Protect
-      condition={has => has({permission: "org:team_settings:manage"}) || has({permission: "org:team_settings:read"})}
-    >
-      {props.children}
-    </Protect>
-  )
-}
-  ```
-  </Tab>
-
-  <Tab>
-    The following snippet uses `has` to inspect a user's Permissions granularly. If the user doesn't have both `org:team_settings:manage` and `org:team_settings:read` Permissions, the component returns `null` instead of rendering its children.
+    The following snippet uses `has()` to inspect a user's Permissions granularly. If the user doesn't have both `org:team_settings:manage` and `org:team_settings:read` Permissions, the component returns `null` instead of rendering its children.
 
     ```tsx filename="/app/dashboard/settings/layout.tsx"
 import type { PropsWithChildren } from "react";
@@ -123,6 +115,23 @@ export default function SettingsLayout(props: PropsWithChildren){
 }
       ```
   </Tab>
+  <Tab>
+    The following snippet uses `<Protect>`'s `condition` prop to conditionally render its children if the user has either `org:team_settings:manage` or `org:team_settings:read` Permissions.
+```tsx filename="/app/dashboard/settings/layout.tsx"
+import type { PropsWithChildren } from "react";
+import { Protect } from "@clerk/nextjs";
+
+export default function SettingsLayout(props: PropsWithChildren){
+  return (
+    <Protect
+      condition={has => has({permission: "org:team_settings:manage"}) || has({permission: "org:team_settings:read"})}
+    >
+      {props.children}
+    </Protect>
+  )
+}
+  ```
+  </Tab>
 </Tabs>
 
 ## Authorization in endpoints
@@ -154,7 +163,7 @@ export default function SettingsLayout(props: PropsWithChildren){
 
     </Callout>
 
-    #### Using `auth().protect`
+    #### Using `auth().protect()`
 
     ```tsx
     import { useAuth } from "@clerk/nextjs";
@@ -167,7 +176,7 @@ export default function SettingsLayout(props: PropsWithChildren){
     }
       ```
 
-    #### Using `auth().has`
+    #### Using `has()`
 
     ```tsx
     import { useAuth } from "@clerk/nextjs";
