updates <Protect /> to <Protect>

--- a/docs/organizations/roles-permissions.mdx
+++ b/docs/organizations/roles-permissions.mdx
@@ -64,6 +64,6 @@ For example, you could create a new Role “sales” (`org:sales`) and a new Per
 ## Next steps
 
 * [Create Roles and Permissions in the Clerk Dashboard](/docs/organizations/create-roles-permissions)
-* [Check out Clerk's pre-built `<Protect />` component](/docs/components/protect)
+* [Check out Clerk's pre-built `<Protect>` component](/docs/components/protect)
 * [Allow and limit access to resources by Role and Permissions](/docs/organizations/verify-user-permissions)
 * [Reassign the Creator Role](/docs/organizations/creator-role)
