--- a/docs/components/protect.mdx
+++ b/docs/components/protect.mdx
@@ -1,17 +1,17 @@
 ---
-title: <Protect />
-description: The <Protect /> component is used for authorization. It only renders its children when the current user has the specified permission or role in the organization.
+title: <Protect>
+description: The <Protect> component is used for authorization. It only renders its children when the current user has the specified permission or role in the organization.
 ---
 
-# `<Protect />`
+# `<Protect>`
 
-The `<Protect />` component is used for authorization. It only renders its children when the current user has the specified [permission or role](/docs/organizations/roles-permissions) in the organization.
+The `<Protect>` component is used for authorization. It only renders its children when the current user has the specified [permission or role](/docs/organizations/roles-permissions) in the organization.
 
 ## Usage
 
-You can pass either a `permission` or `role` key to `<Protect />` to limit who can see the content it renders. The recommended approach is to use `permission` because this lets you modify Roles without breaking your application. Permissions can be assigned to different Roles with ease.
+You can pass either a `permission` or `role` key to `<Protect>` to limit who can see the content it renders. The recommended approach is to use `permission` because this lets you modify Roles without breaking your application. Permissions can be assigned to different Roles with ease.
 
-If you do not pass either prop, `<Protect />` behaves the same as [`<SignedIn />`](/docs/components/control/signed-in) and will render its children if the user is signed in, regardless of their Role or its Permissions.
+If you do not pass either prop, `<Protect>` behaves the same as [`<SignedIn />`](/docs/components/control/signed-in) and will render its children if the user is signed in, regardless of their Role or its Permissions.
 
 For more complex authorization logic, pass conditional logic to the `condition` prop.
 
@@ -105,5 +105,5 @@ While authorization by `permission` is recommended, `<Protect/>` allows a role k
 | `role` | `string` | Optional string corresponding to an Organization's Role in the format `org:<role>` |
 
 <Callout type="warning">
-`<Protect />` can only accept `permission` *or* `role`, not both. `permission` is the recommended approach.
+`<Protect>` can only accept `permission` *or* `role`, not both. `permission` is the recommended approach.
 </Callout>
