--- a/docs/components/protect.mdx
+++ b/docs/components/protect.mdx
@@ -1,6 +1,6 @@
 ---
-title: <Protect>
-description: The <Protect> component is used for authorization. It only renders its children when the current user has the specified permission or role in the organization.
+title: <Protect />
+description: The Protect component is used for authorization. It only renders its children when the current user has the specified permission or role in the organization.
 ---
 
 # `<Protect>`
