feat: Examples with roles typo

--- a/docs/organizations/verify-user-permissions.mdx
+++ b/docs/organizations/verify-user-permissions.mdx
@@ -247,7 +247,7 @@ const canManageSettings = clerk.session.checkAuthorization({
 </CodeBlockTabs>
 
 
-## Authorizate based on Roles
+## Authorize with Roles
 <Callout type="warning">
   Performing role checks is not considered a best-practice and developers should avoid it as much as possible. Usually complex role checks can be refactor with a single Permission check.
 </Callout>
