--- a/docs/backend-requests/making/custom-session-token.mdx
+++ b/docs/backend-requests/making/custom-session-token.mdx
@@ -92,7 +92,7 @@ export default async function handler(req: NextApiRequest, res: NextApiResponse)
 
 ## Add global TypeScript type for additional session claims
 
-For projects using TypeScript, a global type for the additional session claims will avoid type errors in your code and provide auto-completion in your editior.
+A global type for additional session claims defined in a declaration file avoids type errors and provides auto-completion.
 
 ```tsx filename="types/globals.d.ts"
 export { };
