--- a/docs/guides/basic-rbac.mdx
+++ b/docs/guides/basic-rbac.mdx
@@ -259,7 +259,7 @@ The last step will be importing the new `<ManageRoles />` compoennt into the `sr
 
 ```ts filename="src/app/admin/dashboard/page.tsx {3, 14}
 import { redirect } from "next/navigation";
-import { ManageRoles } from "./_components/form";
+import { ManageRoles } from "./_components/manage-roles.tsx";
 import { checkRole } from "@/utils/roles";
 
 export default function AdminDashboard() {
@@ -276,6 +276,7 @@ export default function AdminDashboard() {
   );
 }
 ```
+import { ManageRoles } from "./_components/form";
 
 ## Wrap up
 
