--- a/docs/guides/basic-rbac.mdx
+++ b/docs/guides/basic-rbac.mdx
@@ -3,19 +3,19 @@ title: Implement basic Role Based Access Control with Metadata
 description: Learn how to leverage Clerk's publicMetadata to implement your own basic Role Based Access Controls
 ---
 
-# Implement basic Role Based Access Control with Metadata
+# Implement basic Role Based Access Control (RBAC) with Metadata
 
-Clerk provides [User Metadata](https://clerk.com/docs/users/metadata#user-metadata), which is a tool that can be leveraged to build flexible custom logic into your application. This guide will cover using Public Metadata to build a based Role Based Access Control (RBAC) system for your application. Clerk offers roles as part of the feature set for our [Organizations](https://clerk.com/docs/organizations/overview).  This guide will cover setting up a basic RBAC system for products that don't need Organizations.
+Clerk provides [User Metadata](/docs/users/metadata#user-metadata), which is a tool that can be leveraged to build flexible custom logic into your application. This guide will cover using Public Metadata to build a based Role Based Access Control (RBAC) system for your application. Clerk offers Roles as part of the feature set for [Organizations](/docs/organizations/overview).  This guide will cover setting up a basic RBAC system for products that don't need Organizations.
 
 This guide assumes that you are using Next App Router. The concepts here can be adapted to Next Pages Router and Remix.
 
 ## Configuring the Session
 
-The first step in building basic RBAC will be making `publicMetadata` available to applications directly from the token. This will make it easy to work with and avoid a network request to load the data. We will be using `publicMetadata` as we want to be able to read it in the browser but require updates or changes to only be done server-side or in the Clerk Dashboard. `unsafeMetadata` can be read and updated in the browser, and `privateMetadata` can not be read in the browser.
+To build basic RBAC, you need to make `publicMetadata` available to applications directly from the token. This will make it more convenient to work with and avoid a network request to load the data. `publicMetadata` can be read the browser and can only be updated server-side or in the Clerk Dashboard. `unsafeMetadata` can be read and updated in the browser, and `privateMetadata` can not be read in the browser.
 
-In the Dashobard, navigate to the [Sessions](https://dashboard.clerk.com/last-active?path=sessions) section, click 'Edit' and in the modal enter the following JSON. If you have already customized your session token you may need to merge this with what you currently have.
+In the Clerk Dashobard, navigate to the [Sessions](https://dashboard.clerk.com/last-active?path=sessions) section, click 'Edit' and in the modal enter the following JSON. If you have already customized your session token you may need to merge this with what you currently have.
 
-```
+```bash
 {
 	"metadata": "{{user.public_metadata}}"
 }
@@ -23,7 +23,7 @@ In the Dashobard, navigate to the [Sessions](https://dashboard.clerk.com/last-ac
 
 The session should look like:
 
-create updated version of public/images/guides/basic-rbac/session-customization.png and add here.
+TODO create updated version of public/images/guides/basic-rbac/session-customization.png and add here.
 
 <Callout type="danger">
 The entire token has a limit of 4kb of data. Keep this in mind when customizing the session and add data sparingly.
@@ -48,16 +48,16 @@ declare global {
 
 ## Set a role on your user
 
-Later we we add a basic admin tool to change the roles of user, but for now let's add a role to your own user account. In the Dashboard go to Users and select your own user account. Scroll down to the Metadata section and click 'Edit' on the Public metadata. Add the following and save.
+Later, you will add a basic admin tool to change the roles of user, but for now let's add a role to your own user account. In the Dashboard go to Users and select your own user account. Scroll down to the Metadata section and click 'Edit' on the Public metadata. Add the following and save.
 
-```
+```bash
 {
   "role": "admin"
 }
 ```
 The public metadata should look like:
 
-CREATE UPDATED VERSION OF public/images/guides/basic-rbac/user-public-metadata.png and add here.
+TODO CREATE UPDATED VERSION OF public/images/guides/basic-rbac/user-public-metadata.png and add here.
 
 ## Create an admin dashboard and protect it
 
@@ -87,7 +87,7 @@ The `/admin/dashboard` route now requires that the user is logged into the appli
 
 ## Create a reusable function
 
-Let's create a helper function to make checking roles easier. The first step is modifying `globals.d.ts`. Create a `type` for `Roles` so that union type for the roles can be used in other places in the application, then modify the interface we previously added to use the new `Roles` type.
+Let's create a helper function to make checking roles easier. The first step is modifying `globals.d.ts`. Create a `type` for `Roles` so that union type for the roles can be used in other places in the application, then modify the interface you previously added to use the new `Roles` type.
 
 ```ts filename="src/types/globals.d.ts {3, 8}
 export { };
@@ -142,9 +142,9 @@ You can modify the behaviour of the helper function to meet your needs. Maybe it
 
 ## Add admin tools to find users and add roles
 
-You can change roles in the Clerk Dashboard by editing the `publicMetadata` directly. That works fine, but there are can be many reasons that an application needs a UI for doing this. Let's take the `checkRole()` function that was just added, and leverage it along with server actions to build basic tools to find users and then add roles.
+You can change roles in the Clerk Dashboard by editing the `publicMetadata` directly. You can also build a UI in your application to do this. You can leverage the `checkRole()` function you added along with server actions to build basic tools to find users and then add roles.
 
-We'll start with the server actions. The first, `searchUsers()`, is going to check that the user trying to perform the action is an admin and then will search for Clerk users with the naming query term. For there it will build a custom object with some limited information about the user including their first and last name, email, username, primary email and current role. The second, `setRole()`, will also check the role of the current user. It will then set the role for the selected user to the specified role.
+Start with the server actions. The first, `searchUsers()`, is going to check that the user trying to perform the action is an admin and then will search for Clerk users with the naming query term. For there it will build a custom object with some limited information about the user including their first and last name, email, username, primary email and current role. The second, `setRole()`, will also check the role of the current user. It will then set the role for the selected user to the specified role.
 
 
 ```ts filename="src/app/admin/dashboard/_actions.ts 
@@ -198,7 +198,7 @@ export async function setRole(formData: FormData) {
 }
 ```
 
-With the server actions in place, we can build the `<ManageRoles />` component. This will have an intial form that can be used to search for users. After the admin searches for users, the results will be rendered showing the first and last name, email, role and then 'Make Admin' and 'Make Moderator' buttons. The buttons are accompanied with two hidden inputs, one providing the user id for the user and the other the selected role. 
+With the server actions in place, you can build the `<ManageRoles />` component. This will have an intial form that can be used to search for users. After the admin searches for users, the results will be rendered showing the first and last name, email, role and then 'Make Admin' and 'Make Moderator' buttons. The buttons are accompanied with two hidden inputs, one providing the user id for the user and the other the selected role. 
 
 
 ```ts filename="src/app/admin/dashboard/manage-roles.tsx 
