Roles and permissions docs (#514)
Co-authored-by: panteliselef <panteliselef@outlook.com>
Co-authored-by: Haris Chaniotakis <chanioxaris@gmail.com>
Co-authored-by: Kyle MacDonald <kylemac@users.noreply.github.com>

--- a/docs/references/javascript/session.mdx
+++ b/docs/references/javascript/session.mdx
@@ -104,6 +104,36 @@ Retrieves the user's session token for the given template or the default clerk t
 | --- | --- |
 | `Promise<string \| null>` | The requested token. |
 
+### `checkAuthorization()`
+
+```typescript
+function checkAuthorization(param: CheckAuthorizationParams) => boolean;
+```
+
+#### `CheckAuthorizationParams`
+```typescript
+type CheckAuthorizationParams =
+  | {
+      role: ClerkDefaultRole | CustomRole;
+      permission?: never;
+    }
+  | {
+      role?: never;
+      permission: ClerkDefaultPermission | CustomPermission;
+    };
+```
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `role` | `string` | Accepts [Role](/docs/organizations/roles-permissions#roles) key |
+| `permission` | `string` | Accepts [Permission](/docs/organizations/roles-permissions#permissions) key |
+
+#### Returns
+
+| Type | Description |
+| --- | --- |
+| `boolean` | A boolean that indicates if a user is authorized for the specified role or permission. |
+
 ## Types
 
 ### `PublicUserData`
