--- a/docs/references/nextjs/auth.mdx
+++ b/docs/references/nextjs/auth.mdx
@@ -42,6 +42,38 @@ export async function GET() {
 }
 ```
 
+## Authorization
+
+Use `has` in order to check if a user is authorized to access a component.
+
+```tsx filename="app/page.[jsx/tsx]"
+import { auth } from '@clerk/nextjs';
+
+export default async function Page() {
+  const { has } = auth();
+  const canManage = has({permission:"org:team_settings:manage"});
+
+  if(!canManage) return null;  
+  return <h1v>Team Settings</h1>
+}
+```
+
+## Authorization with `protect`
+
+<Callout type="warning" emoji="⚠️">
+  `auth().protect()` only works for App Router and is considered experimental
+</Callout>
+
+```tsx filename="app/api/route.[js/ts]"
+import { auth } from "@clerk/nextjs";
+
+export const POST = () => {
+  const { userId } = auth().protect({permission: "org:team_settings:manage"})
+  return users.createTeam(userId);
+}
+```
+
+
 ## Check your current user's role
 
 In some cases, you need to check your user's current organization role before displaying data or allowing certain actions to be performed.
@@ -58,5 +90,16 @@ export default async function Page() {
   )
 }
 ```
+
+
+# Return type of `auth`
+
+`auth` returns the [`Authentication`][auth-object] object with a few extra properties.
+
+## Properties
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `protect` | Function | Accepts a permission or a role key or a function with `has` as the first parameter. It will throw a `notFound` Nextjs error if the user is unauthorized, otherwise it returns a the Authentication object |
 
 [auth-object]: /docs/references/nextjs/authentication-object
