--- a/docs/references/nextjs/authentication-object.mdx
+++ b/docs/references/nextjs/authentication-object.mdx
@@ -13,10 +13,13 @@ Both [`auth()`](/docs/references/nextjs/auth) and  [`getAuth()`](/docs/reference
 | --- | --- |
 | `actor` | Holds identifier for the user that is impersonating the current user. |
 | `debug` | Used to help debug issues when using Clerk in development. |
-| `getToken` | A function that returns a promise that resolves to the current user's session token; can also be used to retrieve a custom JWT template. |
-| `orgId` | The current user's currently active organization ID. |
-| `orgRole` | The current user's currently active organization role. |
-| `orgSlug` | The current user's currently active organization slug. |
+| `getToken` | A function that returns a promise that resolves to the current user's session token. Can also be used to retrieve a custom JWT template. |
+| `has` | A function that returns a boolean based on the [Permission or Role](/docs/organizations/roles-permissions) provided as parameter. Can be used for authorization. |
+| `orgId` | The current user's active organization ID. |
+| `orgRole` | The current user's active organization role. |
+| `orgPermissions` | The current user's active organization Permissions. |
+| `orgSlug` | The current user's active organization slug. |
+| `organization` | The current user's active organization object. |
 | `sessionClaim` | The current user's session claim. |
 | `sessionId` | The current user's session ID. |
 | `userId` | The current user's unique identifier. |
