--- a/docs/guides/basic-rbac.mdx
+++ b/docs/guides/basic-rbac.mdx
@@ -76,8 +76,8 @@ export default function AdminDashboard() {
 
   return (
     <>
-      <h1>This is the admin dashboard</h1>
-      <p>This page is restricted to users with the 'admin' role</p>
+      <h1>This is the admin dashboard</h1>      
+      <p>This page is restricted to users with the &apos;admin&apos role.</p>
     </>
   );
 }
@@ -130,7 +130,7 @@ export default function AdminDashboard() {
   return (
     <>
       <h1>This is the admin dashboard</h1>
-      <p>This page is restricted to users with the 'admin' role</p>
+      <p>This page is restricted to users with the &apos;admin&apos role.</p>
     </>
   );
 }
@@ -154,8 +154,8 @@ import { checkRole } from "@/utils/roles";
 import { clerkClient } from "@clerk/nextjs/server";
 
 export async function searchUsers(_: any, formData: FormData) {
-  if (!checkRole('admin')) {
-    return { message: "not Authorized" }
+  if (!checkRole("admin")) {
+    return { message: "Not Authorized" };
   }
   try {
     const res = await clerkClient.users.getUserList({
@@ -171,18 +171,20 @@ export async function searchUsers(_: any, formData: FormData) {
         email: res[i].emailAddresses.find(
           (email) => email.id === res[i].primaryEmailAddressId,
         )?.emailAddress,
-        role: res[i].publicMetadata.role
+        role: res[i].publicMetadata.role,
       });
     }
     return { message: users };
-  } catch (err) {
-    return { message: err };
+  } catch (err: unknown) {
+    if (err instanceof Error) {
+      return { message: err.message };
+    }
   }
 }
 
 export async function setRole(formData: FormData) {
-  if (!checkRole('admin')) {
-    return { message: "not Authorized" }
+  if (!checkRole("admin")) {
+    return { message: "Not Authorized" };
   }
   try {
     const res = await clerkClient.users.updateUser(
@@ -205,10 +207,10 @@ With the server actions in place, you can build the `<ManageRoles />` component.
 "use client";
 
 import { useFormState } from "react-dom";
-import { searchUsers, setRole } from "../_actions";
+import { searchUsers, setRole } from "./_actions";
 
 const initialState = {
-  message: [],
+  message: new Array(),
 };
 
 export const ManageRoles = () => {
@@ -224,34 +226,35 @@ export const ManageRoles = () => {
         </form>
       </div>
 
-      {state?.message?.map((user: any) => {
-        return (
-          <div key={user.userId}>
-            <div>
-              {user.firstName} {user.lastName}
+      {Array.isArray(state?.message) &&
+        state?.message?.map((user: any) => {
+          return (
+            <div key={user.userId}>
+              <div>
+                {user.firstName} {user.lastName}
+              </div>
+              <div>{user.email}</div>
+              <div>{user.role}</div>
+              <div>
+                <form action={setRole}>
+                  <input type="hidden" value={user.userId} name="id" />
+                  <input type="hidden" value="admin" name="role" />
+                  <button type="submit">Make Admin</button>
+                </form>
+              </div>
+              <div>
+                <form action={setRole}>
+                  <input type="hidden" value={user.userId} name="id" />
+                  <input type="hidden" value="moderator" name="role" />
+                  <button type="submit">Make Moderator</button>
+                </form>
+              </div>
             </div>
-            <div>{user.email}</div>
-            <div>{user.role}</div>
-            <div>
-              <form action={setRole}>
-                <input type="hidden" value={user.userId} name="id" />
-                <input type="hidden" value="admin" name="role" />
-                <button type="submit">Make Admin</button>
-              </form>
-            </div>
-            <div>
-              <form action={setRole}>
-                <input type="hidden" value={user.userId} name="id" />
-                <input type="hidden" value="moderator" name="role" />
-                <button type="submit">Make Moderator</button>
-              </form>
-            </div>
-          </div>
-        );
-      })}
+          );
+        })}
     </>
   );
-}
+};
 ```
 
 
@@ -270,7 +273,7 @@ export default function AdminDashboard() {
   return (
     <>
       <h1>This is the admin dashboard</h1>
-      <p>This page is restricted to users with the 'admin' role.</p>
+      <p>This page is restricted to users with the &apos;admin&apos role.</p>
       <ManageRoles />
     </>
   );
