Added information about 'useFormtState'

--- a/docs/guides/basic-rbac.mdx
+++ b/docs/guides/basic-rbac.mdx
@@ -202,6 +202,7 @@ export async function setRole(formData: FormData) {
 
 With the server actions in place, you can build the `<ManageRoles />` component. This will have an intial form that can be used to search for users. After the admin searches for users, the results will be rendered showing the first and last name, email, role and then 'Make Admin' and 'Make Moderator' buttons. The buttons are accompanied with two hidden inputs, one providing the user id for the user and the other the selected role. 
 
+You will see that the code below is using `useFormState()` from `react-dom`. This is a new hook for working with server actions. This hook will update state in the component based on the result of the form action. The component is using it to handle recieving a list of users from the serch. Once that updated state is returned, the component will render a list of matching users.
 
 ```ts filename="src/app/admin/dashboard/manage-roles.tsx 
 "use client";
