--- a/docs/guides/basic-rbac.mdx
+++ b/docs/guides/basic-rbac.mdx
@@ -144,7 +144,7 @@ You can modify the behaviour of the helper function to meet your needs. Maybe it
 
 You can change roles in the Clerk Dashboard by editing the `publicMetadata` directly. You can also build a UI in your application to do this. You can leverage the `checkRole()` function you added along with server actions to build basic tools to find users and then add roles.
 
-Start with the server actions. The first, `searchUsers()`, is going to check that the user trying to perform the action is an admin and then will search for Clerk users with the naming query term. For there it will build a custom object with some limited information about the user including their first and last name, email, username, primary email and current role. The second, `setRole()`, will also check the role of the current user. It will then set the role for the selected user to the specified role.
+Start with the server actions. The first, `searchUsers()`, is going to check that the user trying to perform the action is an admin and then will search for Clerk users with the naming query term. For there it will build a custom object with some limited information about the user including their first and last name, email, username, primary email, and current role. The second, `setRole()`, will also check the role of the current user. It will then set the role for the selected user to the specified role.
 
 
 ```ts filename="src/app/admin/dashboard/_actions.ts 
