--- a/docs/custom-flows/user-impersonation.mdx
+++ b/docs/custom-flows/user-impersonation.mdx
@@ -85,7 +85,7 @@ Following the standard [actor claim of RFC 8693](https://www.rfc-editor.org/rfc/
   "iss": "https://your-site.clerk.accounts.dev",
   "nbf": 1697726906,
   "org_id": "org_123",
-  "org_role": "basic_member",
+  "org_role": "org:member",
   "org_slug": "slug",
   "sid": "sess_123",
   "sub": "user_123"
