--- a/docs/organizations/create-roles-permissions.mdx
+++ b/docs/organizations/create-roles-permissions.mdx
@@ -1,29 +1,29 @@
 ---
-title: Create Roles and assign Permissions
-description: Use the Clerk Dashboard to create and assign Roles and Permissions to users in your Organization.
+title: Create roles and assign permissions
+description: Use the Clerk Dashboard to create and assign roles and permissions to users in your organization.
 ---
 
-# Create Roles and assign Permissions
+# Create roles and assign permissions
 
-In the Clerk Dashboard, you can create Roles, assign Permissions to them, and change users' Roles.
+In the Clerk Dashboard, you can create roles, assign permissions to them, and change users' roles.
 
-## Create a new Role for your Organization
+## Create a new role for your organization
 
-1. In your Clerk Dashboard, navigate to [**Organization Settings**](https://dashboard.clerk.com/last-active?path=organizations-settings) and select the **Roles** tab. 
-2. Select "Create new role".
-3. Give the Role a name, a key to reference it by in the format "`org:<role>`", and a description.
-4. Select "Create role".
+1. In your Clerk Dashboard, navigate to [**Organization Settings**](https://dashboard.clerk.com/last-active?path=organizations-settings) and select the **roles** tab. 
+2. Select **Create new role**.
+3. Give the role a name, a key to reference it by in the format `org:<role>`, and a description.
+4. Select **Create role**.
 
-## Assign Permissions to a Role
+## Assign permissions to a role
 
 1. In your Clerk Dashboard, navigate to [**Organization Settings**](https://dashboard.clerk.com/last-active?path=organizations-settings) and select the **Permissions** tab. 
-2. Select "Create new permission".
-3. Give the Permission a name, a key to reference it by in the format "`org:<resource>:<action>`", and a description.
-4. Select "Create permission".
+2. Select **Create new permission**.
+3. Give the permission a name, a key to reference it by in the format `org:<resource>:<action>`, and a description.
+4. Select **Create permission**.
 
-## Change a user’s Role in an Organization
+## Change a user’s role in an organization
 
 1. In your Clerk Dashboard, navigate to [**Organizations**](https://dashboard.clerk.com/last-active?path=organizations) and select an Organization.
 2. Select the **Members** tab. 
-3. In the list of members, find the one whose Role you want to change.
-4. Select another Role from their Role dropdown.
+3. In the list of members, find the one whose role you want to change.
+4. Select another role from their role dropdown.
