--- a/docs/organizations/creator-role.mdx
+++ b/docs/organizations/creator-role.mdx
@@ -1,29 +1,31 @@
 ---
-title: Reassign the Creator Role
-description: Learn how to assign Clerk's Creator Role to any other Role in an Organization.
+title: Reassign the Creator role
+description: Learn how to assign Clerk's Creator role to any other role in an organization.
 content-type: guide
 ---
 
-# Reassign the Creator Role
+# Reassign the **Creator** role
 
-When a user creates a new Organization, that user is automatically added as the Organization's first member and assigned whichever Role is that org's [Creator Role](/docs/organizations/roles-permissions#the-creator-role). By default, that Role is `admin`. You may want to remove the `admin` Role or assign the Creator Role to another Role. This guide will show you how.
+When a user creates a new organization, that user is automatically added as the organization's first member and assigned whichever role is that org's [**Creator** role](/docs/organizations/roles-permissions#the-creator-role). By default, that role is `admin`. You may want to remove the `admin` role or assign the **Creator** role to another role. This guide will show you how.
 
-You can't **delete** an Organization Role if it's used as the Organization Creator Role. But, you **can** reassign the Creator Role to any other Role with the right Permissions. For example, if you want to delete the `admin` role, you will have to assign another Role the Creator Role.
+You *can't* delete an organization role if it's used as the organization **Creator** role. But, you *can* reassign the **Creator** role to any other role with the right permissions. For example, if you want to delete the `admin` role, you will have to assign another role the **Creator** role.
 
-To reassign the Creator Role, the target Role must have the following [System Permissions](/docs/organizations/roles-permissions#system-permissions):
+To reassign the **Creator** role, the target role must have the following [System Permissions](/docs/organizations/roles-permissions#system-permissions):
 
 - Manage members (`org:sys_memberships:manage`)
 - Read members (`org:sys_memberships:read`)
 - Delete organization (`org:sys_profile:delete`)
 
-## Give a Role the necessary Permissions and assign it as the Creator Role
+## Give a role the necessary permissions and assign it as the **Creator** role
 
-In your Clerk Dashboard, navigate to **Organization Settings** and select the [Roles tab](https://dashboard.clerk.com/last-active?path=roles). If you haven't already, [create a new Role](/docs/organizations/create-roles-permissions#create-a-new-role-for-your-organization) or select an existing Role from the list.
+In your Clerk Dashboard, navigate to **Organization Settings** and select the [**Roles** tab](https://dashboard.clerk.com/last-active?path=roles). If you haven't already, [create a new role](/docs/organizations/create-roles-permissions#create-a-new-role-for-your-organization) or select an existing role from the list.
 
-1. Select "Show System Permissions."
-2. Select "Manage members," "Read members," and "Delete organization" System Permissions.
-3. At the top of the screen, open the "..." menu to the right of the Role's name.
-4. Select the "Set as Creator Role" option from the dropdown.
+1. Select **Show System Permissions**.
+2. In the list of system permissions, select **Manage members,** **Read members,** and **Delete organization**.
+3. At the top right of the screen, to the right of the role's name, open the "..." menu.
+4. From the dropdown, select the **Set as Creator role** option.
+
+In the example below, the `owner` role has been created and is being assigned as the **Creator** role.
 
 <Images 
   width={1512}
@@ -32,9 +34,13 @@ In your Clerk Dashboard, navigate to **Organization Settings** and select the [R
   alt=" "
 />
 
-## Assign the Creator Role to an exisitng Role in the Roles list
+## Assign the **Creator** role to an exisitng role in the roles list
 
-If a Role has the necessary Permissions above, you can set it to the Creator Role in the Organization's list of Roles. Opening the  Role's "..." menu and selecting "Set as Creator Role."
+If a role has the necessary permissions above, you can set it to the **Creator** role. To get to the organization's list of roles, in your Clerk Dashboard, navigate to **Organization Settings** and select the [**Roles** tab](https://dashboard.clerk.com/last-active?path=roles). Open the  role's "..." menu and select **Set as Creator role**.
+
+In the example below, the `owner` role is being assigned as the **Creator** role.
+
+{/* TODO: INCORRECT IMAGE. This image shows how to delete a role instead of set as Creator role? */}
 
 <Images 
   width={1512}
@@ -43,4 +49,4 @@ If a Role has the necessary Permissions above, you can set it to the Creator Rol
   alt=" "
 />
 
-Learn more about Roles and Permissions in [Roles and Permissions](/docs/organizations/roles-permissions).
+[Learn more about roles and permissions](/docs/organizations/roles-permissions).
