--- a/docs/organizations/overview.mdx
+++ b/docs/organizations/overview.mdx
@@ -1,11 +1,11 @@
 ---
-title: Organizations, Roles, and Permissions
-description: Learn about how to create and manage Clerk Organizations and their members.
+title: Organizations, roles, and permissions
+description: Learn about how to create and manage Clerk organizations and their members.
 ---
 
 # Organizations
 
-Organizations are a way of grouping your app’s users. Organizations are shared accounts, useful for project and team leaders—think of GitHub Teams or the different departments of a company. Members of different organizations can usually collaborate across shared resources but might have different levels of access and permissions with different [Roles](/docs/organizations/overview#roles).
+Organizations are a way of grouping your application's users. Organizations are shared accounts, useful for project and team leaders—think of GitHub Teams or the different departments of a company. Members of different organizations can usually collaborate across shared resources but might have different levels of access and permissions with different [role](/docs/organizations/overview#roles).
 
 There is no limit to the number of organizations a user can be a member of. However, a user can only create up to 100 organizations in a given application instance. All members of an organization can view information about other members in the same organization.
 
@@ -16,6 +16,6 @@ Clerk provides [prebuilt components](/docs/components/overview), [React hooks]
   https://github.com/clerk/organizations-demo
 </Callout>
 
-## Roles and Permissions
+## Roles and permissions
 
-Roles determine a user's level of access and Permissions within an organization. [Learn more about how Roles and Permissions work and how to create your own with Clerk.](/docs/organizations/roles-permissions).
+Roles determine a user's level of access and permissions within an organization. [Learn more about how roles and permissions work and how to create your own with Clerk.](/docs/organizations/roles-permissions).
