--- a/docs/references/javascript/session.mdx
+++ b/docs/references/javascript/session.mdx
@@ -125,8 +125,8 @@ type CheckAuthorizationParams =
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `role` | `string` | Accepts [Role](/docs/organizations/roles-permissions#roles) key |
-| `permission` | `string` | Accepts [Permission](/docs/organizations/roles-permissions#permissions) key |
+| `role` | `string` | Accepts [role](/docs/organizations/roles-permissions#roles) key |
+| `permission` | `string` | Accepts [permission](/docs/organizations/roles-permissions#permissions) key |
 
 #### Returns
 
