--- a/docs/references/nextjs/auth.mdx
+++ b/docs/references/nextjs/auth.mdx
@@ -51,9 +51,11 @@ import { auth } from '@clerk/nextjs';
 
 export default async function Page() {
   const { has } = auth();
+
   const canManage = has({permission:"org:team_settings:manage"});
 
   if(!canManage) return null;  
+
   return <h1v>Team Settings</h1>
 }
 ```
@@ -61,14 +63,15 @@ export default async function Page() {
 ## Authorization with `protect`
 
 <Callout type="warning" emoji="⚠️">
-  `auth().protect()` only works for App Router and is considered experimental
+  `auth().protect()` only works for App Router and is considered experimental.
 </Callout>
 
 ```tsx filename="app/api/route.[js/ts]"
 import { auth } from "@clerk/nextjs";
 
 export const POST = () => {
-  const { userId } = auth().protect({permission: "org:team_settings:manage"})
+  const { userId } = auth().protect({permission: "org:team_settings:manage"});
+
   return users.createTeam(userId);
 }
 ```
@@ -92,11 +95,11 @@ export default async function Page() {
 ```
 
 
-# Return type of `auth`
+## Return type of `auth`
 
 `auth` returns the [`Authentication`][auth-object] object with a few extra properties.
 
-## Properties
+### Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
