--- a/docs/components/protect.mdx
+++ b/docs/components/protect.mdx
@@ -3,21 +3,21 @@ title: <Protect />
 description: The Protect component is used for authorization. It only renders its children when the current user has the specified permission or role in the organization.
 ---
 
-# `<Protect>`
+# `<Protect />`
 
-The `<Protect>` component is used for authorization. It only renders its children when the current user has the specified [permission or role](/docs/organizations/roles-permissions) in the organization.
+The `<Protect />` component is used for authorization. It only renders its children when the current user has the specified [permission or role](/docs/organizations/roles-permissions) in the organization.
 
 ## Usage
 
-You can pass either a `permission` or `role` key to `<Protect>` to limit who can see the content it renders. The recommended approach is to use `permission` because this lets you modify Roles without breaking your application. Permissions can be assigned to different Roles with ease.
+To limit who is able to see the content that `<Protect />` renders, you can pass either the `permission` or `role` prop. The recommended approach is to use `permission` because this lets you modify roles without breaking your application. Permissions can be assigned to different roles with ease.
 
-If you do not pass either prop, `<Protect>` behaves the same as [`<SignedIn />`](/docs/components/control/signed-in) and will render its children if the user is signed in, regardless of their Role or its Permissions.
+If you do not pass either prop, `<Protect />` behaves the same as [`<SignedIn />`](/docs/components/control/signed-in) and will render its children if the user is signed in, regardless of their role or its permissions.
 
 For more complex authorization logic, pass conditional logic to the `condition` prop.
 
-### Render content by Permissions
+### Render content by permissions
 
-The children of the following component will only be visible to users with Roles that have the `org:invoices:create` permission.
+The children of the following component will only be visible to users with roles that have the `org:invoices:create` permission.
 
 <Tabs type="framework" items={["Next.js", "React"]}>
   <Tab>
@@ -55,9 +55,9 @@ The children of the following component will only be visible to users with Roles
   </Tab>
 </Tabs>
 
-### Render content by Role
+### Render content by role
 
-While authorization by `permission` is recommended, `<Protect/>` allows a role key to be passed for convenience. The children of the following component will only be visible to users with the `org:billing` Role.
+While authorization by `permission` is recommended, for convenience, `<Protect />` allows a `role` prop to be passed. The children of the following component will only be visible to users with the `org:billing` role.
 
 <Tabs type="framework" items={["Next.js", "React"]}>
   <Tab>
@@ -99,11 +99,11 @@ While authorization by `permission` is recommended, `<Protect/>` allows a role k
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `condition` | `has => boolean` | Optional conditional logic that renders the children if it returns `true`. |
-| `fallback` | `JSX` | An optional snippet of JSX to show when a user doesn't have the `role` or `permission` to access the protected content. |
-| `permission` | `string` | Optional string corresponding to a Role's Permission in the format `org:<resource>:<action>` |
-| `role` | `string` | Optional string corresponding to an Organization's Role in the format `org:<role>` |
+| `condition?` | `has => boolean` | Optional conditional logic that renders the children if it returns `true`. |
+| `fallback?` | `JSX` | An optional snippet of JSX to show when a user doesn't have the `role` or `permission` to access the protected content. |
+| `permission?` | `string` | Optional string corresponding to a Role's Permission in the format `org:<resource>:<action>` |
+| `role?` | `string` | Optional string corresponding to an Organization's Role in the format `org:<role>` |
 
 <Callout type="warning">
-`<Protect>` can only accept `permission` *or* `role`, not both. `permission` is the recommended approach.
+  `<Protect />` can only accept `permission` *or* `role`, not both. The recommended approach is to use `permission`.
 </Callout>
