--- a/docs/organizations/inviting-users.mdx
+++ b/docs/organizations/inviting-users.mdx
@@ -5,7 +5,7 @@ description: Learn how to invite new users to an organization.
 
 # Invite users to an organization
 
-Organization members with appropriate [Permissions](/docs/organizations/roles-permissions) can invite new users to their organization and manage those invitations. When an administrator invites a new member, an invitation email is sent out. The invitation recipient can be either an existing user of your application or a new user. If the latter is true, the user will need to register in order to accept the invitation.
+Organization members with appropriate [permissions](/docs/organizations/roles-permissions) can invite new users to their organization and manage those invitations. When an administrator invites a new member, an invitation email is sent out. The invitation recipient can be either an existing user of your application or a new user. If the latter is true, the user will need to register in order to accept the invitation.
 
 In React and Next.js applications, the [`useOrganization()`](/docs/references/react/use-organization) hook returns the `organization` property, which is then used to call [`organization.inviteMember()`](/docs/references/javascript/organization/invitations#invite-member) passing in the recipient's email address and desired role.
 
@@ -13,7 +13,7 @@ Administrators are also able to revoke organization invitations for users that h
 
 ## Usage
 
-{/* TODO (DOCS-316): Add examples for React and JavaScript. Update and validate these code examples. */}
+{/* TODO (DOCS-316): Add examples for App vs Pages Router, React and JavaScript. Update and validate these code examples. */}
 
 An example implementation in Next.js for inviting users and revoking pending invitations:
 
