--- a/docs/organizations/managing-roles.mdx
+++ b/docs/organizations/managing-roles.mdx
@@ -3,15 +3,15 @@ title: Manage member roles in an organization
 description: Learn how to manage member roles in an organization.
 ---
 
-# Manage member Roles in an organization
+# Manage member roles in an organization
 
-Organization members with appropriate [Permissions](/docs/organizations/roles-permissions#permissions) can manage member [Roles](/docs/organizations/roles-permissions#roles) within an organization, including changing a member's Role, removing them from an organization, and revoking organization invitations.
+Organization members with appropriate [permissions](/docs/organizations/roles-permissions#permissions) can manage member [roles](/docs/organizations/roles-permissions#roles) within an organization, including changing a member's role, removing them from an organization, and revoking organization invitations.
 
-The [`useOrganization()`](/docs/references/react/use-organization) hook can be used to retrieve the current user's membership or the list of memberships for the currently active organization. The [`destroy`](/docs/references/javascript/organization-membership#destroy) and [`update`](/docs/references/javascript/organization-membership#update) methods can be called on the membership object to remove a member or change their Role.
+The [`useOrganization()`](/docs/references/react/use-organization) hook can be used to retrieve the current user's membership or the list of memberships for the currently active organization. The [`destroy`](/docs/references/javascript/organization-membership#destroy) and [`update`](/docs/references/javascript/organization-membership#update) methods can be called on the membership object to remove a member or change their role.
 
 The [`useOrganization()`](/docs/references/react/use-organization) hook can also be used to retrieve the list of invitations for the currently active organization. The [`revoke`](/docs/references/javascript/organization-invitation#revoke) method can be called on the invitation object to revoke the invitation.
 
-Methods for [changing a member's Role](/docs/references/backend/organization/update-organization-membership), [removing a member](/docs/references/backend/organization/delete-organization-membership), and [revoking an invitation](/docs/references/backend/organization/revoke-organization-invitation) are also available on the [Backend API](/docs/references/backend/overview). 
+Methods for [changing a member's role](/docs/references/backend/organization/update-organization-membership), [removing a member](/docs/references/backend/organization/delete-organization-membership), and [revoking an invitation](/docs/references/backend/organization/revoke-organization-invitation) are also available on the [Backend API](/docs/references/backend/overview). 
 
 ## Usage
 
