--- a/docs/organizations/roles-permissions.mdx
+++ b/docs/organizations/roles-permissions.mdx
@@ -1,48 +1,48 @@
 ---
-title: Roles and Permissions
-description: Learn about how to create and manage roles and permissions for Clerk Organizations and their members.
+title: Roles and permissions
+description: Learn about how to create and manage roles and permissions for Clerk organizations and their members.
 ---
 
-# Roles and Permissions
+# Roles and permissions
 
-Clerk supports modeling your own custom Roles and Permissions to control access to resources within your application when you use [Organizations](/docs/organizations/overview).
+Clerk supports modeling your own custom role and permissions to control access to resources within your application when you use [organizations](/docs/organizations/overview).
 
 ## Roles
 
-Roles determine a user's level of access to the Organization. You can extend a Roles privileges and access to resources by adding [Permissions](#permissions).
+Roles determine a user's level of access to the organization. You can extend a role's privileges and access to resources by adding [permissions](#permissions).
 
-### Default Roles
+### Default role
 
-For each instance there are currently two default roles:
+For each instance, there are currently two default roles:
 
-- **Admin (`org:admin`)** Offers full access to Organization resources. Members with the admin role have all the [System Permissions](#system-permissions). They can fully manage the Organization and Organization memberships.
-- **Member (`org:member`)** Offers limited access to Organization resources. Access to Organization resources is limited to only Read members Permission by default. They cannot manage the Organization and Organization memberships but can view information about other members in it.
+- **Admin (`org:admin`)** - Offers full access to organization resources. Members with the admin role have all the [System Permissions](#system-permissions). They can fully manage the organization and organization memberships.
+- **Member (`org:member`)** - Offers limited access to organization resources. Access to organization resources is limited to the "Read members" permission only, by default. They cannot manage the organization and organization memberships, but they can view information about other members in it.
 
 <Callout type="info">
-If you enabled Organizations for your Application before December 2023, the Admin Role is `admin` and the Member Role is `basic_member`, instead of `org:admin` and `org:member`
+  If you enabled organizations for your application before December 2023, the **Admin** role is `admin` and the **Member** role is `basic_member`, instead of `org:admin` and `org:member`, respectively.
 </Callout>
 
-### Custom Roles
+### Custom role
 
-You can create up to 10 of custom Organization Roles per application instance to meet your application needs. If you need more than 10 Roles, reach out to [support@clerk.dev](mailto:support@clerk.dev).
+You can create up to 10 custom organization roles per application instance to meet your application needs. If you need more than 10 roles, reach out to [support@clerk.dev](mailto:support@clerk.dev).
 
-Custom Roles can be granted Permissions and access. For example you can create a new Role of “billing” (`org:billing`) which can be used to group users who belong to a specific department of the Organization and have permission to manage credit card information, invoices, and other resources related to billing.
+Custom roles can be granted permissions and access. For example, you can create a new role of **Billing** (`org:billing`) which can be used to group users who belong to a specific department of the organization and have permission to manage credit card information, invoices, and other resources related to billing.
 
-### The Creator Role
+### The **Creator** role
 
-When a user creates a new Organization, that user is automatically added as the Organization's first member and assigned the Creator Role. By default, Admin is the Creator Role.
+When a user creates a new organization, that user is automatically added as the organization's first member and is assigned the **Creator** role. By default, **Admin** (`org:admin`) is the **Creator** role.
 
 <Callout type="warning">
-You can't delete a Role if it's used as the Organization Creator Role. However, you can [reassign the Creator Role to another role](/docs/organizations/creator-role).
+  You can't delete a role if it's used as the organization's **Creator** role. However, you can [reassign the **Creator** role to another role](/docs/organizations/creator-role).
 </Callout>
 
 ## Permissions
 
-Permissions grant users privileged access to resources and operations like creating and deleting. Clerk supports two types of permissions, System and Custom. 
+Permissions grant users privileged access to resources and operations, like creating and deleting. Clerk supports two types of permissions: System and Custom.
 
 ### System Permissions
 
-Clerk has a set of System Permissions that power Clerk’s Frontend API and [Organization related Clerk Components](/docs/components/overview#organization-components). They are a baseline set of permissions that Clerk needs to operate functionally.
+Clerk has a set of System Permissions that power Clerk’s Frontend API and [organization-related Clerk Components](/docs/components/overview#organization-components). They are a baseline set of permissions that Clerk needs to operate functionally.
 
 Clerk’s System Permissions consist of the following:
 
@@ -53,17 +53,19 @@ Clerk’s System Permissions consist of the following:
 - Read domains (`org:sys_domains:read`)
 - Manage domains (`org:sys_domains:manage`)
 
-You can assign these System Permissions to Roles. 
+You can assign these System Permissions to any role. 
 
-### Custom Permissions
+### Custom permissions
 
-When creating a new Permission, follow the format `org:<resource>:<action>`. You can then assign the Permission to an existing Role.
+When creating a new permission, follow the format `org:<resource>:<action>`. You can then assign the permission to an existing role.
 
-For example, you could create a new Role “sales” (`org:sales`) and a new Permission “Create invoices” (`org:invoices:create`) which allows only users with this Permission to edit invoices. You could also grant this Permission to the “billing” Role.
+For example, you could create a new role called **Sales** (`org:sales`) and a new permission called **Create invoices** (`org:invoices:create`) which allows only users with this permission to edit invoices. You could also grant this permission to the **Billing** role.
 
 ## Next steps
 
-* [Create Roles and Permissions in the Clerk Dashboard](/docs/organizations/create-roles-permissions)
-* [Check out Clerk's pre-built `<Protect>` component](/docs/components/protect)
-* [Allow and limit access to resources by Role and Permissions](/docs/organizations/verify-user-permissions)
-* [Reassign the Creator Role](/docs/organizations/creator-role)
+{/* TODO: Do we want to use cards here? */}
+
+* [Learn how to create roles and permissions in the Clerk Dashboard](/docs/organizations/create-roles-permissions)
+* [Learn how to use roles and permissions to limit the content a user can see with Clerk's pre-built `<Protect />` component](/docs/components/protect)
+* [Learn how to allow and limit access to resources by role and permissions](/docs/organizations/verify-user-permissions)
+* [Learn how to reassign the **Creator** role](/docs/organizations/creator-role)
