--- a/docs/organizations/verified-domains.mdx
+++ b/docs/organizations/verified-domains.mdx
@@ -12,14 +12,16 @@ Domains can be verified through an email verfication code sent to an email that 
 An application instance may only have one verified domain of the same name, and an organization may only have one domain of the same name (verified or unverified).
 
 ## Default role
-When enabling the Verified domains feature, you are also required to define which will role will be assigned to the user that will receive the Organization Invitation or Organization Suggestion in order to join your Organization.
-You can choose any of the available Organization Roles of your instance.
+
+When enabling the verified domains feature, you are also required to define which role will be assigned to the user that will receive the organization invitation or organization suggestions in order to join your organization.
+
+You can choose any of the available organization roles of your instance.
 
 <Callout type="warning">
-    You can't delete an Organization Role if it's used as the Verified Domain default role.
+  You can't delete an organization role if it's used as the verified domain's default role.
 </Callout>
 
-To specify the Verified Domain default role, in the Clerk Dashboard, go to the **[Organizations Settings](https://dashboard.clerk.com/last-active?path=organizations-settings)** page.
+To specify the verified domain's default role, in the Clerk Dashboard, go to the **[Organizations Settings](https://dashboard.clerk.com/last-active?path=organizations-settings)** page.
 
 ## Enrollment modes
 
