--- a/docs/organizations/verify-user-permissions.mdx
+++ b/docs/organizations/verify-user-permissions.mdx
@@ -7,125 +7,128 @@ description: A collection of utility functions and components in order to allow 
 
 Clerk provides two kinds of helpers for authorization:
 
-- **`protect` helpers** are opinionated and will block additional processing for unauthorized users, either by not rendering children or by throwing errors. [`<Protect>` component](/docs/components/protect) and the experimental `auth().protect()` fall into this category.
-- **`has` helpers** are more composable and flexible. They let you check to see what Permissions a user *has*. You can decide what to do if the user lacks the Permission.
+- **`protect` helpers** are opinionated and will block additional processing for unauthorized users, either by not rendering children or by throwing errors. The [`<Protect />` component](/docs/components/protect) and the experimental `auth().protect()` method fall into this category.
+- **`has` helpers** are more composable and flexible. They allow you to check and see what permissions a user *has*. You can decide what to do if the user lacks the permission.
 
-Both kinds of helpers can check a user's Role and Permissions. The recommended approach is to verify a user's Permissions. Roles can be added and removed and their Permissions changed. Authorizing by Permissions is explicit.
+Both kinds of helpers can check a user's role and permissions. The recommended approach is to verify a user's permissions. Roles can be added and removed and their permissions changed. Authorizing by permissions is explicit.
 
 ### `has()`
 
-Clerk's `has()` function can be used on both the frontend and the backend to determine if the user “has” a Role or Permission.
+Clerk's `has()` function can be used on both the frontend and the backend to determine if the user *has* a role or permission.
 
-`has()` can be used anywhere that Clerk returns an [Authentication object](/docs/references/nextjs/authentication-object):
+`has()` can be used anywhere that Clerk returns an [`Authentication` object](/docs/references/nextjs/authentication-object):
 
 - [`auth()`](/docs/references/nextjs/auth) in Next.js App Router
-- [`useAuth()`](/docs/references/react/use-auth) in client components, including during SSR
+- [`useAuth()`](/docs/references/react/use-auth) in Client Components, including during SSR
 - [`getAuth(request)`](/docs/references/nextjs/get-auth) in server contexts outside of the App Router and SSR (Remix Loaders, Node, Express, Fastify, etc)
 
 ## Authorization in Client Components
 
-The examples below work for both SSR and CSR. Examples are written for Next.js App Router but they are supported any React meta framework (e.g. Remix, Gatsby).
+The examples below work for both SSR and CSR. Examples are written for Next.js App Router but they are supported by any React meta framework, such as Remix or Gatsby.
 
-<Tabs type="framework" items={["Next.js with <Protect>", "Next.js with has()"]}>
+<Tabs type="framework" items={["Next.js with <Protect />", "Next.js with has()"]}>
   <Tab>
-  The following snippet uses Clerk's `<Protect>` component to only render the form for users with the `org:team_settings:manage` Permission.
+    The following snippet uses Clerk's `<Protect />` component to only render the form for users with the `org:team_settings:manage` permission.
 
-```tsx filename="/app/dashboard/settings/form.tsx"
-'use client';
-import { Protect } from "@clerk/nextjs";
+    ```tsx filename="/app/dashboard/settings/form.tsx"
+      'use client';
+      import { Protect } from "@clerk/nextjs";
 
-export function SettingsForm(){
-  return (
-    <Protect
-      permission="org:team_settings:manage"
-      fallback={<p>You are not allowed to see this section.</p>}
-    >
-      <form>
-        ....
-      </form>
-    </Protect>
-  )
-}
-  ```
+      export function SettingsForm(){
+        return (
+          <Protect
+            permission="org:team_settings:manage"
+            fallback={<p>You are not allowed to see this section.</p>}
+          >
+            <form>
+              ....
+            </form>
+          </Protect>
+        )
+      }
+    ```
   </Tab>
 
   <Tab>
-    The `useAuth()` hook can help you access what permissions a user has using `has()`. In the below snippet, `has({ permission: "org:team_settings:manage" })` returns `false` if the user does not have the `org:team_settings:manage` Permission.
+    The `useAuth()` hook can help you access what permissions a user has by using `has()`. In the example below, `has({ permission: "org:team_settings:manage" })` returns `false` if the user does not have the `org:team_settings:manage` permission.
 
-```tsx filename="/app/dashboard/settings/form.tsx"
-'use client';
-import { useAuth } from "@clerk/nextjs";
+    ```tsx filename="/app/dashboard/settings/form.tsx"
+      'use client';
+      import { useAuth } from "@clerk/nextjs";
 
-export function SettingsForm(){
-  const { has } = useAuth();
-  const canManageSettings = has({ permission: "org:team_settings:manage" });
+      export function SettingsForm(){
+        const { has } = useAuth();
 
-  if(!canManageSettings) return null;
+        const canManageSettings = has({ permission: "org:team_settings:manage" });
 
-  return (
-    <form>
-      //...
-    </form>
-  )
-}
-  ```
+        if(!canManageSettings) return null;
+
+        return (
+          <form>
+            //...
+          </form>
+        )
+      }
+    ```
   </Tab>
 </Tabs>
 
 ## Authorization in React Server Components
 
-<Tabs type="framework" items={[ "RSC with has()", "RSC with auth().protect()", "RSC with <Protect>"]}>
+<Tabs type="framework" items={[ "RSC with has()", "RSC with auth().protect()", "RSC with <Protect />"]}>
   <Tab>
-    The following snippet uses `has()` to inspect a user's Permissions granularly. If the user doesn't have the `org:team_settings:read` Permission, the component returns `null` instead of rendering its children.
+    The following example uses `has()` to inspect a user's permissions granularly. If the user doesn't have the `org:team_settings:read` permission, the component returns `null` instead of rendering its children.
 
     ```tsx filename="/app/dashboard/settings/layout.tsx"
-import type { PropsWithChildren } from "react";
-import { auth } from "@clerk/nextjs/server";
+      import type { PropsWithChildren } from "react";
+      import { auth } from "@clerk/nextjs/server";
 
-export default function SettingsLayout(props: PropsWithChildren){
-  const { has } = auth()
+      export default function SettingsLayout(props: PropsWithChildren){
+        const { has } = auth()
 
-  const canAccessSettings = has({permission: "org:team_settings:read"});
+        const canAccessSettings = has({permission: "org:team_settings:read"});
 
-  if(!canAccessSettings) return null;
+        if(!canAccessSettings) return null;
 
-  return props.children
-}
+        return props.children
+      }
       ```
   </Tab>
 
   <Tab>
     <Callout>
-      `auth().protect()` will throw a `notFound` Next.js error if authorization checks fail
+      `auth().protect()` will throw a `notFound` Next.js error if authorization checks fail.
     </Callout>
 
     ```tsx filename="/app/dashboard/settings/layout.tsx"
-import type { PropsWithChildren } from "react";
-import { auth } from "@clerk/nextjs/server";
+      import type { PropsWithChildren } from "react";
+      import { auth } from "@clerk/nextjs/server";
 
-export default function SettingsLayout(props: PropsWithChildren){
-  const { userId } = auth().protect({permission: "org:team_settings:read"})
+      export default function SettingsLayout(props: PropsWithChildren){
+        const { userId } = auth().protect({permission: "org:team_settings:read"})
 
-  return props.children
-}
+        return props.children
+      }
       ```
   </Tab>
-  <Tab>
-    The following snippet uses `<Protect>`'s `condition` prop to conditionally render its children if the user has the `org:team_settings:read` Permission.
-```tsx filename="/app/dashboard/settings/layout.tsx"
-import type { PropsWithChildren } from "react";
-import { Protect } from "@clerk/nextjs";
 
-export default function SettingsLayout(props: PropsWithChildren){
-  return (
-    <Protect
-      permission="org:team_settings:read"
-    >
-      {props.children}
-    </Protect>
-  )
-}
-  ```
+  <Tab>
+    The following snippet uses `<Protect />`'s `condition` prop to conditionally render its children if the user has the `org:team_settings:read` permission.
+
+      ```tsx filename="/app/dashboard/settings/layout.tsx"
+        import type { PropsWithChildren } from "react";
+        import { Protect } from "@clerk/nextjs";
+
+        export default function SettingsLayout(props: PropsWithChildren){
+          return (
+            <Protect
+              permission="org:team_settings:read"
+            >
+              {props.children}
+            </Protect>
+          )
+        }
+      ```
   </Tab>
 </Tabs>
 
@@ -134,74 +137,73 @@ export default function SettingsLayout(props: PropsWithChildren){
 <Tabs type="framework" items={["Next.js Server Actions", "Nexjts Route Handlers", "Next.js API Routes"]}>
   <Tab>
     ```tsx
-    import { auth } from "@clerk/nextjs/server";
+      import { auth } from "@clerk/nextjs/server";
 
-    export default function ServerComponent() {
-      async function myAction() {
-        'use server'
-        const { has } = auth();
+      export default function ServerComponent() {
+        async function myAction() {
+          'use server'
+          const { has } = auth();
 
-        const canManage = has({permission:"org:team_settings:manage"});
-        ...
-        // Perform a DB operation ...
+          const canManage = has({permission:"org:team_settings:manage"});
+          ...
+          // Perform a DB operation ...
+        }
       }
-    }
-      ```
+    ```
   </Tab>
 
   <Tab>
     <Callout>
-
-      `auth().protect()` will throw a `notFound` Next.js error if authorization checks fail
-
+      `auth().protect()` will throw a `notFound` Next.js error if authorization checks fail.
     </Callout>
 
     #### Using `auth().protect()`
 
     ```tsx
-    import { useAuth } from "@clerk/nextjs";
+      import { useAuth } from "@clerk/nextjs";
 
-    export const POST = () => {
-      const { userId } = auth().protect({
-        permission: "org:team_settings:manage"
-      })
-      return users.createTeam(userId);
-    }
-      ```
+      export const POST = () => {
+        const { userId } = auth().protect({
+          permission: "org:team_settings:manage"
+        })
+        return users.createTeam(userId);
+      }
+    ```
 
     #### Using `has()`
 
     ```tsx
-    import { useAuth } from "@clerk/nextjs";
+      import { useAuth } from "@clerk/nextjs";
 
-    export const GET = () => {
-      const { userId, has } = auth();
+      export const GET = () => {
+        const { userId, has } = auth();
 
-      if(!userId){
-        return Response.json({error: "Unathorized"}, {status: 401})
+        if(!userId){
+          return Response.json({error: "Unathorized"}, {status: 401})
+        }
+
+        if(!has({permission: "org:team_settings:read"})){
+          return Response.json({error: "Forbidden"}, {status: 403})
+        }
+
+        return users.getTeams(userId)
       }
-
-      if(!has({permission: "org:team_settings:read"})){
-        return Response.json({error: "Forbidden"}, {status: 403})
-      }
-
-      return users.getTeams(userId)
-    }
-      ```
+    ```
   </Tab>
 
   <Tab>
     ```tsx
-    import { getAuth } from "@clerk/nextjs/server";
+      import { getAuth } from "@clerk/nextjs/server";
 
-    export default async function handler(req: NextApiRequest) {
-      const { userId, has } = await getAuth(req);
-      if (!userId) return res.status(401);
+      export default async function handler(req: NextApiRequest) {
+        const { userId, has } = await getAuth(req);
 
-      if(!has({permission: "org:team_settings:read"})) return res.status(403)
+        if (!userId) return res.status(401);
 
-      return users.getTeams(userId)
-    }
+        if(!has({permission: "org:team_settings:read"})) return res.status(403)
+
+        return users.getTeams(userId)
+      }
     ```
   </Tab>
 </Tabs>
@@ -231,82 +233,86 @@ export default function Settings() {
 
 ## Authorization in JS SDK
 
-If you are not using React or any of the meta-frameworks we support, there's a good chance that you are using Clerk.js directly. In that case the following snippet can help.
+If you are not using React or any of the meta-frameworks we support, there's a good chance that you are using Clerk.js directly. In that case, the following example can help.
 
 <CodeBlockTabs type="framework" options={["JavaScript"]}>
-```tsx
-import Clerk from '@clerk/clerk-js'
+  ```tsx
+    import Clerk from '@clerk/clerk-js'
 
-const clerk = new Clerk(...)
-await clerk.load(...)
+    const clerk = new Clerk(...)
+    await clerk.load(...)
 
-const canManageSettings = clerk.session.checkAuthorization({
-  permission: "org:team_settings:manage"
-})
-```
+    const canManageSettings = clerk.session.checkAuthorization({
+      permission: "org:team_settings:manage"
+    })
+  ```
 </CodeBlockTabs>
 
 
-## Authorize with Roles
+## Authorize with roles
+
 <Callout type="warning">
-  Performing role checks is not considered a best-practice and developers should avoid it as much as possible. Usually complex role checks can be refactor with a single Permission check.
+  Performing role checks is not considered a best-practice and developers should avoid it as much as possible. Usually, complex role checks can be refactored with a single permission check.
 </Callout>
 
 You can pass a `role` the same way you can pass a `permission` in all the examples above.
 
 <Tabs type="framework" items={[ "RSC with <Protect>","RSC with auth().protect()", "Client Component with has()", ]}>
   <Tab>
-    The following snippet uses `<Protect>`'s `condition` prop to conditionally render its children if the user is either an `org:admin` or an `org:billing_manager`.
-```tsx filename="/app/dashboard/settings/layout.tsx"
-import type { PropsWithChildren } from "react";
-import { Protect } from "@clerk/nextjs";
+    The following example uses `<Protect />`'s `condition` prop to conditionally render its children if the user is either an `org:admin` or an `org:billing_manager`.
 
-export default function SettingsLayout(props: PropsWithChildren){
-  return (
-    <Protect
-      condition={has => has({role: "org:admin"}) || has({role: "org:billing_manager"})}
-    >
-      {props.children}
-    </Protect>
-  )
-}
-  ```
+    ```tsx filename="/app/dashboard/settings/layout.tsx"
+      import type { PropsWithChildren } from "react";
+      import { Protect } from "@clerk/nextjs";
+
+      export default function SettingsLayout(props: PropsWithChildren){
+        return (
+          <Protect
+            condition={has => has({role: "org:admin"}) || has({role: "org:billing_manager"})}
+          >
+            {props.children}
+          </Protect>
+        )
+      }
+    ```
   </Tab>
+
   <Tab>
     <Callout>
-      `auth().protect()` will throw a `notFound` Next.js error if authorization checks fail
+      `auth().protect()` will throw a `notFound` Next.js error if authorization checks fail.
     </Callout>
 
     ```tsx filename="/app/dashboard/settings/layout.tsx"
-import type { PropsWithChildren } from "react";
-import { auth } from "@clerk/nextjs/server";
+      import type { PropsWithChildren } from "react";
+      import { auth } from "@clerk/nextjs/server";
 
-export default function SettingsLayout(props: PropsWithChildren){
-  const { userId } = auth().protect(has => has({role: "org:admin"}) || has({role: "org:billing_manager"}))
+      export default function SettingsLayout(props: PropsWithChildren){
+        const { userId } = auth().protect(has => has({role: "org:admin"}) || has({role: "org:billing_manager"}))
 
-  return props.children
-}
-      ```
+        return props.children
+      }
+    ```
   </Tab>
+
   <Tab>
     The following snippet uses `useAuth()` to inspect a user's roles granularly. If the user doesn't have either an `org:admin` or an `org:billing_manager` role, the component returns `null` instead of rendering its children.
 
-```tsx filename="/app/dashboard/settings/form.tsx"
-'use client';
-import { useAuth } from "@clerk/nextjs";
+    ```tsx filename="/app/dashboard/settings/form.tsx"
+      'use client';
+      import { useAuth } from "@clerk/nextjs";
 
-export function SettingsForm(){
-  const { has } = useAuth();
-  const canAccessSettings = has({role: "org:admin"}) || has({role: "org:billing_manager"})
+      export function SettingsForm(){
+        const { has } = useAuth();
+        const canAccessSettings = has({role: "org:admin"}) || has({role: "org:billing_manager"})
 
-  if(!canManageSettings) return null;
+        if(!canManageSettings) return null;
 
-  return (
-    <form>
-      //...
-    </form>
-  )
-}
-  ```
+        return (
+          <form>
+            //...
+          </form>
+        )
+      }
+     ```
   </Tab>
 </Tabs>
