--- a/docs/references/backend/organization/update-organization-membership.mdx
+++ b/docs/references/backend/organization/update-organization-membership.mdx
@@ -23,4 +23,4 @@ const organization = await clerkClient.organizations.updateOrganizationMembershi
 | --- | --- | --- |
 | `organizationId` | `string` | The organization ID of the organization a user belongs to. |
 | `userId` | `string` | The ID of the user. |
-| `role` | `string` | The [Role](/docs/organizations/roles-permissions) to assign user. |
+| `role` | `string` | The [role](/docs/organizations/roles-permissions) to assign user. |
