last of the suggestions

--- a/docs/references/nextjs/auth.mdx
+++ b/docs/references/nextjs/auth.mdx
@@ -97,12 +97,10 @@ export default async function Page() {
 
 ## Return type of `auth`
 
-`auth` returns the [`Authentication`][auth-object] object with a few extra properties.
+`auth` returns the [`Authentication`](/docs/references/nextjs/authentication-object) object with a few extra properties.
 
 ### Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `protect` | Function | Accepts a permission or a role key or a function with `has` as the first parameter. It will throw a `notFound` Nextjs error if the user is unauthorized, otherwise it returns a the Authentication object |
-
-[auth-object]: /docs/references/nextjs/authentication-object
+| `protect` | Function | Accepts a permission or a role key or a function with `has` as the first parameter. It will throw a `notFound` Next.js error if the user is unauthorized. Otherwise, it returns an `Authentication` object. |
