--- a/docs/references/react/use-auth.mdx
+++ b/docs/references/react/use-auth.mdx
@@ -104,7 +104,7 @@ The `useAuth()` hook is a convenient way to access the current auth state. This 
 | `sessionId` | The current user's session ID. |
 | `signOut` | A function that signs the user out. |
 | `getToken` | A function that returns a promise that resolves to the current user's session token. Can also be used to retrieve a custom JWT template. |
-| `has` | A function that returns a boolean based on the [Permission or Role](/docs/organizations/roles-permissions) provided as parameter. Can be used for authorization. |
+| `has` | A function that returns a boolean based on the [permission or role](/docs/organizations/roles-permissions) provided as parameter. Can be used for authorization. |
 | `orgId` | The current user's active organization ID. |
 | `orgRole` | The current user's active organization role. |
 | `orgPermissions` | The current user's active organization Permissions. |
