--- a/docs/references/react/use-organizations.mdx
+++ b/docs/references/react/use-organizations.mdx
@@ -39,7 +39,7 @@ function App() {
 }
 
 // Form to create a new organization. The current user
-// will receive the Creator Role.
+// will receive the Creator role.
 function NewOrganization() {
   const [name, setName] = useState("");
   const router = useRouter();
